# fstream-utils

./: .gitignore  CMakeLists.txt  futils.cpp  futils.h  txtblocks.cpp  txtblocks.h
include/TB/: txtblocks.h
src/: blkfile.cpp  blkfile.h  block.cpp  block.h
tests/: CMakeLists.txt  readBlk.cpp  testFile.txt  writeBlk.cpp
